# emu

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  debug.c  debug.h  emu.c  emu_config.h.in  gui.c  gui.h
arch/: CMakeLists.txt
arch/6502/: 2c02.c  2c02.h  6502.c  6502.h  CMakeLists.txt  cartridge.c  cartridge.h  controller.c  controller.h  debug.c  debug.h  mapper.c  mapper.h  mapper_000.c  mapper_000.h  mapper_001.c  mapper_001.h  mapper_002.c  mapper_002.h  mapper_003.c  mapper_003.h  nes_input.c  nes_input.h  nesbus.c  nesbus.h  palette.h
lib/: CMakeLists.txt
lib/display/: CMakeLists.txt  display.c  display.h
